# synapse

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  NOTICE  NOTICES  PYPI_README.md  README.md  docker-compose.yml  hatch_build.py  pyproject.toml  pytest.ini  run_tests.sh  test_results.txt
.github/workflows/: ci.yml  publish.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/02-infrastructure-checks-and-cli/: 02-02-SUMMARY.md
.planning/phases/03-language-server-checks/: 03-05-SUMMARY.md
.planning/phases/05-expand-http-endpoint-mapping-to-all-languages/: 05-05-SUMMARY.md
.planning/phases/07-mcp-tools-consolidation/: 07-01-SUMMARY.md
.serena/: project.yml
.synapps/: config.json
.synapse/: config.json
docs/: unit-test-review.md
docs/plans/: 2026-03-07-call-edge-indexing.md  2026-03-07-lsp-graph-accuracy-design.md  2026-03-07-lsp-graph-accuracy.md  2026-03-07-synapse-design.md  2026-03-07-synapse-implementation.md  2026-03-08-cli-mcp-fix-design.md  2026-03-08-cli-mcp-fix-implementation.md  2026-03-08-context-features-design.md  2026-03-08-context-features-implementation.md  2026-03-08-graph-schema-design.md  2026-03-08-graph-schema-implementation.md  2026-03-08-mcp-integration-tests-design.md  2026-03-08-mcp-integration-tests-plan.md  2026-03-09-synapse-improvements-design.md  2026-03-09-synapse-improvements-plan.md
docs/specs/: 2026-03-13-integration-tests-design.md
docs/superpowers/plans/: 2026-03-11-synapse-roadmap-implementation.md  2026-03-12-gap-report-bug-fixes.md  2026-03-13-falkordb-to-memgraph.md  2026-03-13-find-callers-exclude-test-callers.md  2026-03-13-integration-tests.md
docs/superpowers/specs/: 2026-03-11-synapse-roadmap-design.md  2026-03-12-gap-report-bug-fixes-design.md  2026-03-13-falkordb-to-memgraph-design.md  2026-03-13-find-callers-exclude-test-callers-design.md
spa/: index.html  package-lock.json  package.json  vite.config.js
spa/src/: App.svelte  app.css
spa/src/lib/: api.js
src/solidlsp/: ls.py
src/solidlsp/language_servers/: csharp_language_server.py  eclipse_jdtls.py
src/synapps/cli/: app.py  banner.py  tree.py
src/synapps/graph/: analysis.py  edges.py  lookups.py  nodes.py  schema.py
src/synapps/hooks/: config_upsert.py  detector.py  installer.py  scripts.py
src/synapps/indexer/: git.py  indexer.py  method_implements_indexer.py  references_resolver.py  symbol_resolver.py  tests_phase.py  tree_sitter_util.py
src/synapps/lsp/: csharp.py  interface.py  java.py  python.py  typescript.py
src/synapps/mcp/: instructions.py  (+1 more)
src/synapse/: __init__.py  service.py
tests/e2e/: conftest.py  test_graph_interactions.py
tests/integration/: conftest.py  test_auto_update.py  test_cli_commands.py  test_cli_commands_java.py  test_cli_commands_python.py  test_cli_commands_typescript.py  test_graph_schema.py  test_http_cross_language.py  test_http_endpoints.py  test_index_oneonone.py  test_mcp_schema.py  test_mcp_tools.py  test_mcp_tools_java.py  test_mcp_tools_python.py  test_mcp_tools_typescript.py
tests/mcp/: test_tools_integration.py
tests/unit/: conftest.py  test_architecture.py  test_auto_sync.py  test_banner.py  test_cli.py  test_cli_tree.py  test_dead_code.py  test_external_call_stubs.py  test_find_tests_for.py  test_find_untested.py  test_http_endpoints.py  test_mcp_schema.py  test_mcp_server.py  test_mcp_sync.py  test_packaging.py  test_queries.py  test_read_symbol.py  test_serve_command.py  test_service.py  test_service_parallel_index.py  test_service_resolve.py  test_service_smart_index.py  test_service_sync.py  test_spring_data_stubs.py  test_summarize.py  test_tests_edges.py  test_tools.py
(+288 files in other folders)
