[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "synapps-mcp"
version = "1.7.1"
readme = "PYPI_README.md"
description = "Code intelligence MCP server — indexes codebases into a queryable graph of symbols, call chains, and relationships"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["mcp", "code-intelligence", "tree-sitter", "graph-database", "language-server-protocol"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "neo4j>=5.0.0",
    "mcp>=1.0.0",
    "typer>=0.12.0",
    "watchdog>=4.0.0",
    "pydantic>=2.0.0",
    "sensai-utils>=1.5.0",
    "overrides>=7.7.0",
    "pathspec>=0.12.1",
    "psutil>=7.0.0",
    "beautifulsoup4>=4.12.0",
    "joblib>=1.3.0",
    "charset-normalizer>=3.0.0",
    "requests>=2.31.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-c-sharp>=0.23.0",
    "pyright>=1.1.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-java>=0.23.0",
    "docker>=7.0.0",
    "fastapi>=0.115.0",
    "mcp-config-path>=0.1.3",
    "InquirerPy>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.0.0",
]

[project.scripts]
synapps = "synapps.cli:app"
synapps-mcp = "synapps.mcp.server:main"

[project.urls]
Homepage = "https://github.com/SynappsCodeComprehension/synapps"
Source = "https://github.com/SynappsCodeComprehension/synapps"
Issues = "https://github.com/SynappsCodeComprehension/synapps/issues"
Changelog = "https://github.com/SynappsCodeComprehension/synapps/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/synapps", "src/solidlsp"]
